--- a/npcs/thomdrick_holecarver.yaml
+++ b/npcs/thomdrick_holecarver.yaml
@@ -467,29 +467,65 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Strength
+    - Dexterity
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Illusions, Phantasms, Charmed, Paralyzed, Poisoned with Alchemical Poisons
     skills:
-    - Duergar Abilities:
-       - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-       - Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
-       - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-       - Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
-       - Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
-    
-    - Undertaker Abilities: 
-       - Skill Proficiencies: Medicine, Religion - Burial Rites, History - Burial Rites
-       - Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Sewnig Kit    
+    - Gravedigger
+    proficiencies:
+    - Athletics
+    - Medicine
+    - Religion - Burial Rites    
+    - History - Burial Rites
+    - Carpenter's Tools
+    - Stonecarver's Tools
+    - Sewing Kit
+  special-abilities:
+  - title: Duergar Abilities
+  - abilities: 
+    - title: Superior Darkvision
+    - content: See 120 in like bright light in dim light and like dim light in darkness
+    - title: Duergar Resilience
+    - content: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
+    - title: Sunlight Sensitivity
+    - content: Disadvantage on attack and perception roles in direct sunlight
+    - title: Duergar Magic
+    - content: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
+    - title: Duergar Weapons Training
+    - content: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
+  - title: Undertaker Abilities
+  - abilities:
+    - title: Skill Proficiencies
+    - content: Medicine, Religion, Burial Rites, Investigation, History, Burial Rites, Insight,
+    - title: Tool Proficiencies
+    - content: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
+    - title: Funeral Network
+    - content: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
+    - title: Coroner
+    - content: Has advantage when trying to determine cause and/or time of death     
 
-    special-abilities: 
-    - Feats: Tavern Brawler, Crusher, Slasher, Grappler
+  - title: Feats
+  - content: Tavern Brawler, Crusher, Slasher, Grappler
 
-    attacks: |
-      Hand Crossbow at range or shovel in melee range 
-    combat-tactics: |
-      Loves a good fight and will bull his way into melee range
-    special-equipment:
-    - Hand Crossbow
-    - +1 Combat Shovel 
-    - Undertaker's Tools - Various tools from Carpenter's and Stonecarver's Tools and Sewing Kits 
+  - title: Attacks
+  - content: Hand Crossbow at range or shovel in melee range 
+  - title: Combat Tactics
+  - content: Loves a good fight and will bull his way into melee range
+
+  - title: Special Equipment
+  - abilities:
+    - title: +1 Combat Shovel
+    - content: This shovel is enchanted with magical durability and sharpness, turning it into a powerful weapon and an effective shovel. This shovel counts as a weapon with the heavy and two-handed properties, dealing 1d10 
+               slashing, piercing, or bludgeoning damage (your choice). It has the following properties - Excavate - You can, as an action, move up to a 3-foot cube of loose dirt up to 5 feet away. This has no effect on solid 
+               stone.    
+    - title: Undertaker's Tools
+    - content: Various tools from Carpenter's and Stonecarver's Tools and Sewing Kits 
     
     
   profile:
